--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   },
   "files": [
     "cli",
-    "package.json",
-    "webpack"
+    "scripts",
+    "webpack",
+    "package.json"
   ],
   "bin": {
     "wp-eject": "cli/eject.js"
@@ -36,28 +37,30 @@
   "prettier": "./prettier.config.js",
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "8.0.1",
     "@swc/core": "^1.3.72",
     "@types/postcss-pxtorem": "^6.0.0",
-    "@svgr/webpack": "8.0.1",
-    "dotenv": "^16.3.1",
+    "autoprefixer": "^10.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-manifest-plugin": "^5.0.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "webpack-merge": "^5.9.0",
+    "cssnano": "^6.0.1",
+    "dotenv": "^16.3.1",
     "eslint-webpack-plugin": "^4.0.1",
     "favicons-webpack-plugin": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss-pxtorem": "^6.0.0",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
-    "cssnano": "^6.0.1",
-    "autoprefixer": "^10.4.14",
-    "postcss-pxtorem": "^6.0.0",
     "swc-loader": "^0.2.3",
-    "ts-node": "^10.9.1"
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-node": "^10.9.1",
+    "webpack": "5.x",
+    "webpack-cli": ">=5.x",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.9.0"
   },
   "peerDependencies": {
     "typescript": ">=4",
@@ -70,30 +73,7 @@
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@swc/core": "^1.3.72",
-    "@types/postcss-pxtorem": "^6.0.0",
-    "@svgr/webpack": "8.0.1",
-    "dotenv": "^16.3.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-manifest-plugin": "^5.0.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "webpack-merge": "^5.9.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "favicons-webpack-plugin": "^6.0.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sass": "^1.64.1",
-    "sass-loader": "^13.3.2",
-    "cssnano": "^6.0.1",
-    "autoprefixer": "^10.4.14",
-    "postcss-pxtorem": "^6.0.0",
-    "swc-loader": "^0.2.3",
-    "ts-node": "^10.9.1"
+    "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,css,scss,md}": "prettier --write"
