--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsjam-cli",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "CLI for ts react webpack & friends",
   "main": "",
   "keywords": [
@@ -48,6 +48,7 @@
     "autoprefixer": "^10.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^6.0.1",
     "dotenv": "^16.3.1",
     "eslint-webpack-plugin": "^4.0.1",
@@ -56,8 +57,12 @@
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-pxtorem": "^6.0.0",
+    "postcss-loader": "^7.3.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
