--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
       "*": ["*", "src/*"]
     }
   },
-  "exclude": ["react-template/**/*"]
+  "exclude": ["react-template/**/*", "package/**/*"]
 }
