--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsjam-cli",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "CLI for ts react webpack & friends",
   "main": "",
   "keywords": [
@@ -27,6 +27,7 @@
     "scripts",
     "react-template",
     "tsjam-template",
+    "tsjam-template/.gitignore",
     "webpack",
     "package.json"
   ],
@@ -71,6 +72,12 @@
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.9.0"
+  },
+  "optionalDependencies": {
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "prettier": "@tsjam/web-config-base/prettier.config.js",
   "lint-staged": {
