--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "@tsjam/web-config-base/tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2018", // ES9
+    "target": "ES2020",
+    "module": "ESNext",
     /* Paths */
-    "baseUrl": "./",
+    "baseUrl": ".",
     "outDir": "dist", // "lib"
     "paths": {
       "*": ["*", "src/*"]
     }
   },
-  "exclude": ["package/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
