--- a/tsjam-template/tsconfig.json
+++ b/tsjam-template/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@tsjam/web-config-base/tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2018", // ES9
+    "target": "ES2020",
+    "module": "ESNext",
     /* Paths */
     "baseUrl": ".",
     "outDir": "dist", // "lib"
