--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsjam-cli",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "CLI for ts react webpack & friends",
   "main": "",
   "type": "module",
@@ -91,5 +91,8 @@
   "lint-staged": {
     "*.{ts,tsx,js}": "eslint --cache --fix",
     "*.{ts,tsx,js,css,md}": "prettier --write"
+  },
+  "dependencies": {
+    "yoctocolors": "^2.1.2"
   }
 }
