--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsjam-cli",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "CLI for ts react webpack & friends",
   "main": "",
   "type": "module",
@@ -32,7 +32,7 @@
     "jest-template",
     "tsjam-template",
     "tsjam-template/.npmrc",
-    "tsjam-template/.gitignore",
+    "tsjam-template/gitignore",
     "webpack",
     "package.json"
   ],
